# python-opinet-api

./: .gitignore  AGENTS.md  README.md  SKILL.md  antigravity.json  claude.json  codex.json  opinet-api.md  pyproject.toml
.codex/: config.toml
docs/: debug-fixture-workflow.md  implementation-status.md
examples/: streamlit_debug_app.py
opinet/: __init__.py  _convert.py  _http.py  client.py  codes.py  coords.py  exceptions.py  models.py  normalized.py  vworld.py
opinet/experimental/: __init__.py  client.py
src/opinet/: __init__.py  _http.py  catalog.py  client.py  config.py  coords.py  debug.py  models.py  normalized.py  transport.py  vworld.py
tests/: conftest.py  test_async_client.py  test_catalog.py  test_client_endpoints.py  test_codes.py  test_coords.py  test_debug.py  test_http.py  test_iter_stations_in_bbox.py  test_live_api.py  test_normalized_models.py  test_normalized_records.py  test_pep561_packaging.py  test_vworld_sigungu.py
tests/fixtures/: low_top10_with_trade_context.json
