[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opinet"
version = "0.1.0"
description = "Unofficial Python client for the Korean Opinet fuel price API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
    "pykrtour[geo]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=7.0",
    "responses>=0.23",
    "pytest-cov",
    "setuptools>=68",
    "mypy",
    "types-requests",
    "wheel",
]

[tool.setuptools.packages.find]
include = ["opinet*"]

[tool.setuptools.package-data]
opinet = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: tests that call the real Opinet API and require OPINET_API_KEY",
]

[tool.mypy]
mypy_path = "../pykrtour"
