[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-opinet-api"
version = "0.2.0"
description = "Unofficial Python client for the Korean Opinet fuel price API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyproj>=3.5",
]

[project.optional-dependencies]
vworld = [
    "python-vworld-api>=0.1.0",
]
dev = [
    "build",
    "pytest>=7.0",
    "respx>=0.21",
    "pytest-cov",
    "setuptools>=68",
    "mypy",
    "wheel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["opinet*"]

[tool.setuptools.package-data]
opinet = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "live: tests that call the real Opinet API and require OPINET_API_KEY",
]
